# py-pg-notify

./: LICENSE  README.md  pyproject.toml
examples/: main.py
examples/event-notifier/: README.md  db_setup.py  inventory_listener.py  inventory_notifier.py
examples/pubsub/: README.md  app.py  pubsub.py
py_pg_listen/: listener.py
py_pg_notify/: __init__.py  listener.py  notifier.py  pgmanager.py  utils.py
tests/: README.md  test_listener.py  test_notifier.py
