[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-pg-listen"
version = "0.1.0"
description = "A Python package for seamless integration of PostgreSQL LISTEN/NOTIFY with your projects."
authors = [
    { name = "D S Sanjaya", email = "dssanjay55555@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["postgresql", "listen", "notify", "python", "database", "notification"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psycopg2>=2.9",
]

[tool.setuptools.packages.find]
where = ["py_pg_listen"]
